# abap_vibecode_checker

./: README.md  abap_objects_parser.py  folder_analysis_LLM ABAP Programs_1753619323.json  folder_analysis_Real ABAP Programs_1753619340.json  folder_analyzer.py  pyproject.toml  requirements.txt
LLM ABAP Programs/: DeepSeekR1.abap  DeepSeekV3.abap  GPT4_1.abap  GPT4o.abap  GPT_o3.abap  Gemini25_Flash.abap  Gemini25_Pro.abap  Grok4.abap  KimiK2.abap  Qwen3_Coder.abap  Sonnet35.abap  Sonnet37.abap  Sonnet4.abap
Real ABAP Programs/: CMP_MASS_READ_DATAF01.abap  RC1_IDOC_SET_STATUS.abap  RSTABLESIZE.abap  ZSD_PRINT_MX_SD_F01.abap  rbdapp01.abap  zdtp_massdownload.abap
abap_objects_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
